fixed padding issue on mobile modal

--- a/src/Components/Styles/DesktopNavBarPlanets.module.css
+++ b/src/Components/Styles/DesktopNavBarPlanets.module.css
@@ -1,5 +1,5 @@
 .link {
-  width: 12%;
+  width: 10%;
 }
 
 .container {
