--- a/src/Components/Styles/NavModal.module.css
+++ b/src/Components/Styles/NavModal.module.css
@@ -18,6 +18,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 0.5rem;
 }
 
 .modal section {
